syntax = "proto3";

// Resource package defines protobuf serialization of COSI resources.
package cosi.resource;

option go_package = "github.com/cosi-project/runtime/api/v1alpha1";

import "google/protobuf/timestamp.proto";

// Metadata represents resource metadata.
//
// (namespace, type, id) is a recource pointer.
// (version) is a current resource version.
// (owner) is filled in for controller-managed resources with controller name.
// (phase) indicates whether resource is going through tear down phase.
// (finalizers) are attached controllers blocking teardown of the resource.
message Metadata {
    string namespace = 1;
    string type = 2;
    string id = 3;
    string version = 4;
    string owner = 5;
    string phase = 6;
    google.protobuf.Timestamp created = 7;
    google.protobuf.Timestamp updated = 8;
    repeated string finalizers = 9;
}

// Spec defines content of the resource.
message Spec {
    // Protobuf-serialized representation of the resource.
    bytes proto_spec = 1;
    // YAML representation of the spec (optional).
    string yaml_spec = 2;
}

// Resource is a combination of metadata and spec.
message Resource {
    Metadata metadata = 1;
    Spec spec = 2;
}
